# build-tauri-test

./: README.md  docker-compose.yml
.github/workflows/: cross-bundle.yml
containers/node/: Dockerfile
mnt/node/my-app/: firebase.json  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
mnt/node/my-app/functions/src/: index.ts
mnt/node/my-app/src/: TODO.md  app.css  app.d.ts  env.d.ts
mnt/node/my-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
mnt/node/my-app/src-tauri/migrations/: 01_init.sql  02_add_watershed.sql  03_add_name_column_watershed_items.sql  04_add_prefectures_watersheds_table.sql
mnt/node/my-app/src-tauri/src/: bootstrap.rs  database.rs  handlers.rs  main.rs
mnt/node/my-app/src-tauri/src/bootstrap/: database_config.rs  dirs.rs
mnt/node/my-app/src-tauri/src/handlers/: create_watershed.rs  curves.rs  delete_watershed.rs  get_curves.rs  save_export.rs  update_watershed.rs  update_watershed_item.rs  watersheds.rs
mnt/node/my-app/src/app/: +page.svelte
mnt/node/my-app/src/components/: BrowseNavigationButton.svelte  EditNavigationButton.svelte  ImportModal.svelte  LogoutButton.svelte  Map.svelte  Map2.svelte  MapLib.svelte  Navigation.svelte  SearchBlock.svelte  Segment.svelte  SegmentCluster.svelte  StartingPoint.svelte  StartingPointCluster.svelte  ToolBlock.svelte  mapStore.ts
mnt/node/my-app/src/components/map3/: LassoControl.svelte  (+11 more)
mnt/node/my-app/src/lib/: firebase.ts  leaflet.ts
mnt/node/my-app/src/routes/: +layout.svelte
mnt/node/my-app/src/store/: mapStore.ts  prefs.ts
(+60 files in other folders)
